--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://git.io/fjHxp" rel="nofollow">´ó¼ÍÔª</a> | <a href="https://git.io/fjHxh" rel="nofollow">¶¯Ì¬Íø</a> | <a href="https://git.io/fjHpv" rel="nofollow">ÉñÖÝ</a> | <a href="https://git.io/fjHpJ" rel="nofollow">ÍËµ³</a> | <a href="https://git.io/fjHpU" rel="nofollow">¾ÅÆÀ</a> | <a href="https://git.io/fjHpT" rel="nofollow">ÍøÃÅ</a> | <a href="https://git.io/fjHpk" rel="nofollow">ÉñÔÏ</a> | <a href="https://git.io/fjHpI" rel="nofollow">ÐÂ¼ÍÔª</a> | <a href="https://git.io/fjHpL" rel="nofollow">¿´ÖÐ¹ú</a> | <a href="https://git.io/fjHpt" rel="nofollow">Ã÷»ÛÍø</a> | <a href="https://git.io/fjHpq" rel="nofollow">Ã÷»ÛÊ®·½</a> | <a href="https://git.io/fj9lQ" rel="nofollow">Ã÷»Û½¹µã</a> | <a href="https://git.io/fjHpm" rel="nofollow">Ï£ÍûÖ®Éù</a> | <a href="https://git.io/fjHpY" rel="nofollow">ÂþÌ¸µ³ÎÄ»¯</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">ÐÂÌÆÈË</a> | <a href="https://git.io/JervF" rel="nofollow">ÑÇÌ«Ì¨</a> | <a href="https://git.io/fjHpG" rel="nofollow">Ö±²¥</a> | <a href="https://git.io/fj9lp" rel="nofollow">´«Ææ</a> | <a href="https://git.io/fj9lX" rel="nofollow">Éñ»°</a> | <a href="https://git.io/fjHpZ" rel="nofollow">ÈËÉú</a> | <a href="https://git.io/fjFNJ" rel="nofollow">Î±»ð</a > | <a href="https://git.io/fjHpc" rel="nofollow">ÕæÏàÆ¬</a> | <a href="https://git.io/fj9lK" rel="nofollow">²Ø×ÖÊ¯</a> | <a href="https://git.io/fj9l5" rel="nofollow">¶ÌÊÓÆµ</a> | <a href="https://git.io/fjHpW" rel="nofollow">¸æËßÎ´À´</a > | <a href="https://git.io/fjHpl" rel="nofollow">ÖÕ¼¶Ä¿µÄ</a> | <a href="https://git.io/fj9lM" rel="nofollow">ÖÐ¹²»îÕª</a > | <a href="https://git.io/fjHp4" rel="nofollow">·çÓêÌìµØÐÐ</a></p></td></tr>
-<tr><td VALIGN=TOP width="355"><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737713.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/11/190617233359100484-600x400-320x200.jpg">Â·Í¸£ºÖÐ¼ÍÎ¯¶àÄêÇ°Ä»ºóÍÆ¶¯Òý¶ÉÌõÀý</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
+<tr><td VALIGN=TOP width="355"><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/22/n11737939.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1N92VW-320x200.jpg">´¨ÆÕ£ºÃÀÖÐ½«ºÜ¿ìÇ©ÊðµÚÒ»½×¶ÎÃ³Ò×Ð­Òé</a><br><h2><p><hr><strong>ÅÅÐÐ°ñ</strong></p></h2>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735219.md#1">Ï°½üÆ½°ÄÃÅ½²»°³öÏÖ¿ÚÎó ÑëÊÓ¼±ÏÂÁîÎðÖØ²¥</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/14/n11722684.md#1">¡¾¶À¼Ò¡¿°ïÖÐ¹²ºìÉ«×Ê±¾º£Íâ²¼¾ÖµÄÉñÃØÈËÎï</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726641.md#1">±¡ÎõÀ´Ö®×Ó±¡¹Ï¹Ï ×îÐÂÐÐ×ÙÆØ¹â</a><br>
@@ -31,6 +31,7 @@
 <br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nf6092.md#1">¸ü¶à......</a></p>
 </td><td VALIGN=TOP width="352">
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737694.md#1">´óÂ½´åÃñ£ºÌìÈ»ÆøÌ«¹óÉÕ²»Æð ¶¬ÌìÄÑ°¾</a><br>
+<a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737713.md#1">Â·Í¸£ºÖÐ¼ÍÎ¯¶àÄêÇ°Ä»ºóÍÆ¶¯Òý¶ÉÌõÀý</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737062.md#1">²¨ÌØÍõÊÂ¼þ ×¨¼Ò£ºÖÐ¹²ÒªÇóÌý»°ÈÇÈËÑá</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737558.md#1">¡¾ÐÂÎÅ¿´µã¡¿Ì«¿Õ±ø³öÊÀ ÃÀÊ×´´ÐÂ±øÖÖµÄ±³ºó</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737618.md#1">ÖÜÏþ»Ô£º´¨Ï°ÔÙÍ¨»° Ã³Ò×Ð­ÒéÇ©ÊðÈÔ´æ±äÊý</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737465.md#1">Â½Í¯ÐÇÅàÑµ²ØÏÝÚå ÊÔ¾µ±³ºóÊÇÊýÍòÅàÑµ·Ñ</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737305.md#1">ÂíÔÆÐ¶ÈÎºó ÔÚºþ±±»ñ¡°ÐÂÖ°¡±</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737201.md#1">»Æçù87ËêÄ¸Ç×ÏÕÔâºÚÊÖ ºôÓõÍâ½ç¹Ø×¢</a><br>
-<a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734248.md#1">¸ÛÈË¸ÐÐ»´ó¼ÍÔª×öÏÖ³¡Ö±²¥</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737690.md#1">ÃñÖ÷µ³µ¯ÛÀ´¨ÆÕ »ò·´ÖúÆä³É¹¦Á¬ÈÎ</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737343.md#1">¿ØÖÆºËÎä ´¨ÆÕÕþ¸®ÕýÊ½Ñû±±¾©¿ªÊ¼¾ü±¸»áÌ¸</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737361.md#1">°²È«µ£ÓÇ ÃÀº£¾üÏÞÖÆÊ¹ÓÃ¶¶Òôº£Íâ°æ</a><br>
@@ -88,12 +88,12 @@
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735663.md#1">ÉîÛÚ¾­¼ÃÔöËÙÏÖ40Äê×îµÍ  ÄÚÒò¶à¹ýÍâÒò</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735719.md#1">2020Äê»ÒÌì¶ìÊÂ¼þ ÃÀ¹ú¶Ô»ªÊµÐÐ×Ê±¾¹ÜÖÆ</a><br>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735585.md#1">ÐÇ»ðÍ¬ÃË4ÈË»ñ±£ÊÍ ÂÉÊ¦³â¸Û¾¯¡°Ë¾ÂíÕÑÖ®ÐÄ¡±</a><br>
-<br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d38tnp4uyqf3st.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
+<br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413_2.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gudianwu.jpg" title="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ" alt="ÉñÔÏ¹ÅµäÎè¼¼ÇÉ±íÑÝ">ÉñÔÏ¹ÅµäÎè±íÑÝ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9ping.jpg" title="¾ÅÆÀ¹²²úµ³" alt="¾ÅÆÀ¹²²úµ³">¾ÅÆÀ¹²²úµ³</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/communism.jpg" title="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ" alt="¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ">¹²²úÖ÷ÒåÖÕ¼«Ä¿µÄ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weihuo.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"" alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"">ÖÐ¹²µÄÎ±»ðÆ­¾Ö"</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1400l.jpg" title="ÆÊÎö1400Àý" alt="ÆÊÎö1400Àý">ÆÊÎö1400Àý</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/tianan.jpg" title="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì" alt="Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì">Í¨ÍùÌì°²ÃÅµÄÂÃ³Ì</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/weilai.jpg" title="Î´À´ÈËµÄÉñ»°" alt="Î´À´ÈËµÄÉñ»°">Î´À´ÈËµÄÉñ»°¹ÊÊÂ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/changzhi.jpg" title="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯" alt="¹Å½ñÆæ¹Û-²Ø×ÖÊ¯">¹Å½ñÆæ¹Û-²Ø×ÖÊ¯</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ji-zy.jpg" title="ÖÐ¹²×ï¶ñµÄ»îÕª" alt="ÖÐ¹²×ï¶ñµÄ»îÕª">ÖÐ¹²×ï¶ñµÄ»îÕª</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/huozhai.jpg" title="ÌúÖ¤ÈçÉ½" alt="ÌúÖ¤ÈçÉ½">ÌúÖ¤ÈçÉ½</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4ke.jpg" title="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ" alt="Ò»¼ÒËÄ¿ÚËÀÓÚÖÐ¹²±©Õþ">Ò»¼ÒËÄ¿ÚËÀÓÚ±©Õþ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jie-di.jpg" title="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦" alt="©¤µÜÃÃÏà¼ÌËÀÓÚÖÐ¹²ÆÈº¦">µÜÃÃÏà¼ÌËÀÓÚÆÈº¦</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ma-sj.jpg" title="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ" alt="ËýÃÇÐí¶àÒÑ¾­±»ÖÐ¹²ÆÈº¦ÖÁËÀ">ËýÃÇ±»ÖÐ¹²ÆÈº¦ËÀ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/shuan-cxl.jpg" title="Ë«³ÇÑªÀá" alt="Ë«³ÇÑªÀá">Ë«³ÇÑªÀá</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/wu-zbh.jpg" title="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤" alt="Õðº³ÈËÐÄµÄÎÞ×ï±ç»¤">ÎÞ×ï±ç»¤Õðº³ÈËÐÄ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6c10-720.jpg" title="´Ó610µ½720" alt="´Ó610µ½720">´Ó610µ½720</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/xian-z.jpg" title="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ" alt="ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ">ÖÐ¹²¹ÙÔ±µÄÑ¡Ôñ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/425.jpg" title="ÍòÈËÉÏ·ÃÕæÏà" alt="ÍòÈËÉÏ·ÃÕæÏà">ÍòÈËÉÏ·ÃÕæÏà</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/qing-h.jpg" title="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó" alt="±»ÖÐ¹²ÆÈº¦µÄÇå»ªÑ§×Ó">±»ÆÈº¦µÄÇå»ªÑ§×Ó</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/jian-z513.jpg" title="¼ûÖ¤513" alt="¼ûÖ¤513">¼ûÖ¤513</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/gongfu.jpg" title="¹¦·ò Ñ°µÀ" alt="¹¦·ò Ñ°µÀ">¹¦·ò Ñ°µÀ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/guangguimian.jpg" title="¸è³ª¼ÒÈËÉúÆæ¼£" alt="¸è³ª¼ÒÈËÉúÆæ¼£">¸è³ª¼ÒµÄÈËÉúÆæ¼£</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-jjy.jpg" title="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ" alt="ÃûÐ£¾«Ó¢µÄÑ¡Ôñ">ÃûÐ£¾«Ó¢µÄÑ¡Ôñ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/yin-lj.jpg" title="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ" alt="ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ">ÒôÀÖÖ®¼ÒµÄ¹ÊÊÂ</a><br><a href="https://d22w5zopyxhc9t.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/ming-hsf.jpg" title="Æ½·²ÖÐµÄ²»Æ½·²" alt="Æ½·²ÖÐµÄ²»Æ½·²">Æ½·²ÖÐµÄ²»Æ½·²</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/nizhibeituolanlao.jpg" title="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ">ÉÆÁ¼Å®Ê¿±»Í¶ÄÐÀÎ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/huozhai1.jpg" title="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª"  alt="¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª">¾¯ÎÀÄ¿»÷ÖÐ¹²»îÕª</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/motoumks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·">Âí¿ËË¼µÄ³ÉÄ§Ö®Â·</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/konggaojm.jpg" title="303ÍòÈËµÄ¾Ù±¨"  alt="303ÍòÈËµÄ¾Ù±¨">303ÍòÈËµÄ¾Ù±¨</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/lianganduibi.jpg" title="º£Ï¿Á½°¶Ç¿ÁÒ·´²î"  alt="º£Ï¿Á½°¶Ç¿ÁÒ·´²î">º£Ï¿Á½°¶Ç¿ÁÒ·´²î</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½">Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/130/xuejiao.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°">²»Ò»ÑùµÄº£ÍâÐ£Ô°</a><br>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>ÖÐ¹úÈËÈ¨</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737133.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/04/Distribution_Presentation_March2018_1.5_Allpapers_slide-150x120.jpeg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11737133.md#1">´ó¼ÍÔªÉùÃ÷£ºÓõÁ³Êé¸üÕý¶Ô´ó¼ÍÔª²»ÊµÑÔÂÛ</a><br>FacebookÉù³ÆÒÑÉ¾³ýÓë´ó¼ÍÔªÃ½Ìå¼¯ÍÅ ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/6/n11706347.md#1">·´ËÍÖÐºÍÁùËÄÊÂ¼þ ÃÀÕþ¸®Ó¦¶Ô´ëÊ©¶Ô±È</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733542.md#1">ÂÉÊ¦£ºÎª·¨ÂÖ¹¦Ñ§Ô±×öÎÞ×ï±ç»¤Ã»ÓÐ´í</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734006.md#1">¡¾ÅÄ°¸¾ªÆæ¡¿¿¹Õù·çÇÄÈ»±±ÉÏ Ïã¸ÛÐÇ»ð±»¶¢ÉÏ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734074.md#1">Ó¢¹úÉÏÒéÔº»áÒé Ò½Éú³â¸Û¾¯¶Ô¾ÈÔ®ÈËÔ±Ê©±©</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733696.md#1">ÉòÑôÑÐ¾¿ÉúÔâÍ¬Ñ§¿³¶Ï¼¡ëì ±¨°¸3¸öÔÂÎÞ¹û</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid278.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÖÐ¹ú¾­¼Ã</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735717.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2010/11/1011041022472262-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735717.md#1">Â·Í¸£ºÃÀ¾ü·½ÄâÎªµ¼µ¯ºÍÕ½»ú¶Ú»ýÏ¡ÍÁ´ÅÌú</a><br>¸ù¾ÝÂ·Í¸Éç¿´µ½µÄÒ»·ÝÕþ¸®ÎÄ¼þ£¬Îå½Ç ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735669.md#1">´Ó·É»úµ½µ¼µ¯ ¶íÂÞË¹Ö¸¿ØÖÐ¹²µÁÇÔ¾üÊÂ¼¼Êõ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734042.md#1">Âô²»Í£ º£º½Äâ5ÒÚÃÀÔª´òÕÛ³öÊÛÎÄË¼º£»Ô</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733621.md#1">½ü8ÒÚ¹ÉÈ¨ÖÊÑº±¬À× ÖÐÐÅ¹ú°²ÄêÄÚÎ¥Ô¼°ÙÒÚ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734045.md#1">ÖÐ¹úÊ½¹¤³Ì¡°Ç·¡±×Öµ±Í· ÖÐÐ¡ÆóÒµÔâÑê</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733758.md#1">ÒþÂ÷Ô±¹¤½ÓÊÜÖÐ¹²×ÊÖú ÃÀÑÐ¾¿Ëù±»·£550Íò</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid283.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>´óÂ½ÕþÖÎ</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733577.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/Untitled-15-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733577.md#1">ÐÂÎÅ´óÆÆ½â£º¾öÕ½2020£¡Ì¨Íå¿¹ºì¹Ø¼ü½»·æ</a><br> 2020Ì¨Íå´óÑ¡£¬½øÈëµ¹Êý×îºóÈý¸öÐÇÆ ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735617.md#1">°ÄÃÅÒÆ½»20ÄêÍí»á ÁÖÖ£ÀÏ¹«²»ÅÄÕÆ ÎÞÉù¿¹Òé£¿</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734395.md#1">¡¾·­Ç½±Ø¿´¡¿Ã³Ò×Ð­ÒéÖÐ¹²¾Þ´óÈÃ²½µÄ±³ºó</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733207.md#1">¡¾Ö±²¥»Ø·Å¡¿Ì¨Íå¸±×ÜÍ³ºòÑ¡ÈËµçÊÓÕþ¼û»á</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735219.md#1">Ï°½üÆ½°ÄÃÅ½²»°³öÏÖ¿ÚÎó ÑëÊÓ¼±ÏÂÁîÎðÖØ²¥</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734831.md#1">ÃÀÃ½£ºÖÐ¹²Ê×ËÒ×ÔÖÆº½Ä¸ÊÇÆ¯¸¡µÄÖ½ÀÏ»¢£¿</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid277.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÌìÔÖÈË»ö</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733651.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2018/12/84ba374e317fd1b46d0d1b913852bbad-600x400-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733651.md#1">É½Î÷Éè½ûÃºÇøÍÆÃº¸ÄÆø ÇÀÃº·âÂ¯ ÃñÔ¹·ÐÌÚ</a><br>½üÄêÀ´£¬ÖÐ¹²µ±¾ÖÒÔ¡°ÖÎö²¡±ÎªÓÉÔÚ¶à ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/21/n11736993.md#1">¼ªÁÖÔØ37ÈË°ÍÊ¿²à»¬×¹½­ 6ÈËËÀÍö</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734233.md#1">ËÄ´¨ÄÚ½­ÔÙ·¢Éú3.3¼¶µØÕð</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11731701.md#1">ËÄ´¨ÔÙ·¢µØÕð ½ñÄêÖÁÉÙ14´ÎµØÕð</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729434.md#1">ËÄ´¨ÄÚ½­5.2¼¶µØÕð 18ÈËÊÜÉË8Ç§»§Í£µç</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11729550.md#1">¹óÖÝÃº¿óÊÂ¹ÊÖÂ16ËÀ ËÄ´¨ÉøË®ÊÂ¹ÊÖÂ5ËÀ</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid280.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>Éç»áÍòÏó</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735446.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/f00d04241153ca652cca18deff1fe6ce-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735446.md#1">¸±×ÜÍ³Õþ¼û·¢±í»á ÀµÇåµÂ£ºÖúÖÐ¹úÃñÖ÷»¯</a><br>2020¸±×ÜÍ³µçÊÓÕþ¼û·¢±í»á20ÈÕµÇ³¡£¬ ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735084.md#1">áéÖÝ¶¨»éÉ¥Àñ½ð²»µÃ³¬300Ôª ÍøÃñ£º¹ÜÌ«¿í</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11734452.md#1">Ã¿ÈÕÈýÍËÉùÃ÷¾«Ñ¡£¨2019/12/19£©</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733750.md#1">Â½ÄÐÐÇÅÄÏ·ÒÔÊý×Ö´úÌ¨´Ê »¬»ü±íÑÝÒýÈÈÒé</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733249.md#1">¿ËÂ³×È£ºµ¯ÛÀ°¸ÒÑ±ÀÀ£ ÃñÖ÷µ³Õó½Å´óÂÒ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11732846.md#1">ÖÐ¹²ÑÏÖØ½éÑ¡ Ò¶Íû»Ô£ºÌ¨ÈËÓÐÊØ»¤ÃñÖ÷µÄÈÍÐÔ</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid282.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>¿Æ½ÌÎÄ»¯</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735028.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/FakeFossil_news1_BL-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735028.md#1">ÖÐ¹úÑ§ÕßÒÔ¼ÙÖ©Öë»¯Ê¯·¢±íÂÛÎÄ Ôâ×¨¼Ò²ð´©</a><br>ÖÐ¹ú¿ÆÑ§¼ÒÈ¡µÃÔ¶¹Å¾Þ´ó¡°Ö©Öë¡±µÄ»¯ ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/20/n11735508.md#1">ºÓÄÏÒ»ÖÐÑ§ÉúÔâ°ÔÁèÖÂËÀ ¹Ù·½Ëµ·¨±»³âÐ¶Ôð</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/19/n11733222.md#1">Ê×ÂÖÈëÎ§Ãûµ¥¹«²¼ Â½Æ¬¡¶ÄÄß¸¡·ÎÞÔµ°ÂË¹¿¨</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721813.md#1">ÈÈÒÀÔúÎª½ÇÉ«»Ñ³Æ»áÆïÂí ÓÖÎªÔ²»ÑÂäÏÂ²¡¸ù</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/13/n11721510.md#1">ÖÐ¹²»ùÒò±à¼­´òÔì¡°³¬¼¶Öí¡± Ñ§½çÍ´Åú</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718879.md#1">ÔìÐÍÄ£·Â»¨Ç§¹Ç Ð»ÄÈº°»°ÕÔÀöÓ±£ºÐø¼¯ÎÒ½ÓÑÝ</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid281.md#1">¸ü¶à......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>ÍøÎÅ½ûÎÅ</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728358.md#1">¸ÛÈË¸ø¿¹ÒéÕßÃÇÐ´Ê¥µ®¿¨£ºÒÔºóÔÙÇì×£</a><br>Ïã¸ÛÃñÖ÷ÔË¶¯³ÖÐø½øÐÐ¡£Ê¥µ®½Ú½«½ü£¬ ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/16/n11726478.md#1">ÖÐ¹²²Î¾üÐí½ø²»Ðí³ö Ò»´óÑ§ÉúÍËÎéÔâÖØ·£</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/12/n11718936.md#1">ÃÀÁªÉç¼ÍÄî±»ÖÐ¹²ÒÔ¼äµý×ïÉ±º¦µÄÖÐ¹ú¼ÇÕß</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/4/n11701016.md#1">ÃÀÎªºÎµãÃûÒªÖÆ²Ã¡¶´ó¹«±¨¡·¡¶ÎÄ»ã±¨¡·</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11716284.md#1">ÐÂÎÅ×ÔÓÉ¶ñ»¯ ÖÐ¹²½ñÄê¼à½û¼ÇÕßÊýÈ«ÇòµÚÒ»</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/7/n11707663.md#1">ÃÀÍ¼Æ¬ÉÌÅäºÏÖÐ¹²½¨ºÚÃûµ¥ Ô±¹¤ÇëÔ¸º°Í£</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid2420.md#1">¸ü¶à......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>ÈºÌåÊÂ¼þ</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/IMG_9586-150x120.jpg"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/18/n11731023.md#1">ÔÁ´åÃñÆûÓÍµ¯¹¥Õþ¸®ÊÓÆµÆØ¹â Ä¿»÷ÕßÃèÊöÏÖ³¡</a><br>¼Ì11ÔÂµ×¹ã¶«Ã¯Ãû»¯ÖÝÊÐÎÄÂ¥ÕòÉÏÍò´å ...<br><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/17/n11728981.md#1">´åÃñÒÉÕþ¸®Ò×µØ½¨»ðÔá³¡ Ã¯ÃûÔÙ±¬¾¯Ãñ³åÍ»</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/15/n11723534.md#1">Íø´«ÉÏº£ÊÐÃñÉÏ½Ö¿¹Òé ¸ßºô¡°´òµ¹¸¯°Ü¡±</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/11/n11714651.md#1">¹ú¼ÊÈËÈ¨ÈÕ ¶àÎ»´óÂ½Î¬È¨ÈËÊ¿±»¿ØÖÆ²»ÄÜÍâ³ö</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713727.md#1">²Î¼ÓÈËÈ¨ÈÕ»î¶¯ ÃÀ×¤»ª´óÊ¹¹ÝÇ°ÊýÊ®ÈË±»×¥</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/12/10/n11713745.md#1">²ØÉí¼Ò¾ß´ÓÄ«Î÷¸çÍµ¶ÉÃÀ¹ú 11ÖÐ¹úÈË±»¾Ð</a><br><br><p><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncid279.md#1">¸ü¶à......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>¾ÅÆÀ¹²²úµ³</strong></p></h2><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">¡¾Ò»¡¿ÆÀ¹²²úµ³ÊÇÊ²Ã´</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">¡¾¶þ¡¿ÆÀÖÐ¹ú¹²²úµ³ÊÇÔõÑùÆð¼ÒµÄ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">¡¾Èý¡¿ÆÀÖÐ¹ú¹²²úµ³µÄ±©Õþ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">¡¾ËÄ¡¿ÆÀ¹²²úµ³ÊÇ·´ÓîÖæµÄÁ¦Á¿</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">¡¾Îå¡¿ÆÀ½­ÔóÃñÓëÖÐ¹²Ïà»¥ÀûÓÃÆÈº¦·¨ÂÖ¹¦</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">¡¾Áù¡¿ÆÀÖÐ¹ú¹²²úµ³ÆÆ»µÃñ×åÎÄ»¯</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">¡¾Æß¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÉ±ÈËÀúÊ·</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">¡¾°Ë¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÐ°½Ì±¾ÖÊ</a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">¡¾¾Å¡¿ÆÀÖÐ¹ú¹²²úµ³µÄÁ÷Ã¥±¾ÐÔ</a></td><td VALIGN=TOP width="352"><h2><p><strong>ÈýÍË´ó³±</strong></p></h2><strong>ÍË³öÖÐ¹²µ³¡¢ÍÅ¡¢¶Ó×ÜÈËÊý:
 
 ```diff
-- ¹² 348,345,863 ÈË
+- ¹² 348,349,352 ÈË
 ```
 </strong>
 <a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/19/n11666092.md#1">¾ÅÆÀ15ÖÜÄê ¿´´óÂ½ÃñÖÚÆúÖÐ¹² ¾ä¾äÕæÇé</a><br>
